bpo-37960: Silence only necessary errors in repr() of buffered and text streams. (GH-15543)

(cherry picked from commit b235a1b47394eedc5f8ea4cf214f56c4c6932e59)

Co-authored-by: Serhiy Storchaka <storchaka@gmail.com>